--- a/encheres/templates/encheres/enchere_en_cours.html
+++ b/encheres/templates/encheres/enchere_en_cours.html
@@ -35,7 +35,11 @@
 
     {% if enchere %}
         <div class="card shadow">
-            <img src="{{ enchere.voiture.image.url }}" class="card-img-top" alt="Voiture" style="object-fit: cover; height: 300px;">
+            {% if enchere.voiture.image %}
+                <img src="{{ enchere.voiture.image.url }}" class="card-img-top" alt="Voiture" style="object-fit: cover; height: 300px;">
+            {% else %}
+                <p>Aucune image disponible</p>
+            {% endif %}
             <div class="card-body">
                 <h3 class="card-title">{{ enchere.voiture }}</h3>
                 <p class="card-text">Description : {{ enchere.voiture.description }}</p>
