--- a/encheres/templates/encheres/enchere_en_cours.html
+++ b/encheres/templates/encheres/enchere_en_cours.html
@@ -36,7 +36,7 @@
     {% if enchere %}
         <div class="card shadow">
             {% if enchere.voiture.image %}
-                <img src="{{ enchere.voiture.image.url }}" class="card-img-top" alt="Voiture" style="object-fit: cover; height: 300px;">
+                <img src="{{ enchere.voiture.image.url }}" class="card-img-top" alt="Voiture" style="object-fit: cover; width: 30%; height: 300px;">
             {% else %}
                 <p>Aucune image disponible</p>
             {% endif %}
