--- a/encheres/templates/encheres/accueil.html
+++ b/encheres/templates/encheres/accueil.html
@@ -5,6 +5,7 @@
     <title>{% block title %}Accueil - Enchères Voitures{% endblock %}</title>
     <!-- Lien Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="csrf-token" content="{{ csrf_token }}">
 </head>
 
 <body class="bg-light">
